Completed splash screen

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,10 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorAccent"
+        android:width="213dp"
+        android:height="51dp"
+        android:background="@drawable/button_background"
         android:fontFamily="@font/roboto_condensed_bold"
         android:padding="10dp"
-        android:text="Getting Started"
+        android:text="@string/getting_started"
         android:textColor="@color/whiteTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/topic_learn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
