--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="subTextColor">#726E6E</color>
     <color name="splashTextColor">#8D8882</color>
     <color name="whiteTextColor">#FFFFFF</color>
+    <color name="textInputColor">#FFF9EB</color>
+    <color name="textSign">#9c7346</color>
 </resources>
