--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <Button
         android:id="@+id/login"
@@ -23,7 +22,6 @@
         android:width="299dp"
         android:height="51dp"
         android:background="@drawable/button_background"
-        android:enabled="false"
         android:text="@string/action_sign_in_short"
         android:textColor="@color/whiteTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,34 +36,18 @@
         android:layout_width="273dp"
         android:layout_height="245dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
         android:contentDescription="@string/topic_learn"
-        app:layout_constraintBottom_toTopOf="@+id/ipEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.178"
         app:srcCompat="@drawable/splash_logo" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/email"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/ipEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLoginLogo"
-        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/ipPassword"
-        android:layout_width="299dp"
-        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="23dp"
         android:autofillHints=""
@@ -74,9 +56,9 @@
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
-        android:paddingRight="5dp"
+        android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:selectAllOnFocus="true"
         android:textColorHint="@color/textSign"
@@ -84,47 +66,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ipEmail" />
 
     <EditText
         android:id="@+id/ipEmail"
-        android:layout_width="305dp"
-        android:layout_height="43dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="24dp"
         android:background="@color/textInputColor"
         android:hint="@string/hint_email"
         android:importantForAutofill="yes|auto"
         android:inputType="textEmailAddress"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
-        android:paddingRight="5dp"
+        android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:selectAllOnFocus="true"
         android:textColorHint="@color/textSign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="389dp" />
-
-    <TextView
-        android:id="@+id/txtPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/password"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="449dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLoginLogo"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/txtAccountyet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_medium"
-        android:text="@string/don_t_have_an_account_yet"
+        android:text="Don't have an account yet?"
         android:textColor="@color/textPrimaryColor"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -142,6 +114,7 @@
         android:text="@string/sign_up"
         android:textColor="@color/textSign"
         android:textSize="16sp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.713"
