--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -50,7 +50,7 @@
         android:layout_marginEnd="180dp"
         android:fontFamily="@font/roboto_medium"
         android:text="@string/learn_topics"
-        android:textColor="@color/splashTextColor"
+        android:textColor="@color/whiteTextColor"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
