--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/actionSearchBtn"
+        android:icon="@mipmap/search_icon"
+        android:title="@string/action_search_text"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/actionSettingBtn"
+        android:title="@string/action_setting_text" />
+    <item
+        android:id="@+id/actionLogoutBtn"
+        android:title="@string/action_logout_text" />
 </menu>
