--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,12 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/bottom_action_home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/bottom_home_text" />
     <item
+        android:id="@+id/bottom_action_notification"
         android:icon="@drawable/ic_baseline_notifications_24"
         android:title="@string/bottom_notification_text" />
     <item
+        android:id="@+id/bottom_action_profile"
         android:icon="@drawable/ic_baseline_account_box_24"
         android:title="@string/bottom_account_text" />
 </menu>
